--- a/scss/config/_theme.scss
+++ b/scss/config/_theme.scss
@@ -32,5 +32,7 @@ $default-theme: (
   color-schemes: colors.$schemes,
 );
 
+$variant-colors: primary secondary neutral info success warning danger !default;
+
 $theme: () !default;
 $theme: map.deep-merge($default-theme, $theme);
