--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -3,10 +3,11 @@
 @use '../internal' as *;
 @use 'effects';
 @use 'filters';
+@use 'size';
 @use 'spacing';
 
 $utilities: () !default;
-$utilities: map-deep-merge(effects.$utilities, filters.$utilities, spacing.$utilities);
+$utilities: map-deep-merge(effects.$utilities, filters.$utilities, size.$utilities, spacing.$utilities);
 
 @mixin utilities {
   @include generate-utilities($utilities);
