--- a/dev/assets/scss/_config.scss
+++ b/dev/assets/scss/_config.scss
@@ -4,5 +4,22 @@
 
 @use 'koi' with (
   $color-schemes: light dark dim,
-  $use-button-animation: true
+  $use-button-animation: true,
+  $variant-colors: primary secondary neutral info success warning danger,
+  // $theme: (
+  //   colors: (
+  //     primary: (
+  //       0: #fdf2f8,
+  //       1: #fce7f3,
+  //       2: #fbcfe8,
+  //       3: #f9a8d4,
+  //       4: #f472b6,
+  //       5: #ec4899,
+  //       6: #db2777,
+  //       7: #be185d,
+  //       8: #9d174d,
+  //       9: #831843,
+  //     ),
+  //   ),
+  // )
 );
